cat << 'EOF' > ~/DH_ws/src/vehicle_msgs/package.xml
<?xml version="1.0"?>
<package format="3">
  <name>vehicle_msgs</name>
  <version>0.0.0</version>
  <description>Custom vehicle messages (ControlCmd)</description>

  <maintainer email="darkhorse@todo.todo">darkhorse</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
EOF

